kubernetes/apps/home-automation/frigate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: home-automation
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames: ["cctv.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: frigate
          port: 5000
          weight: 1
